# ttd

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  classes.html  config.h.in  configure  configure.ac  dir_16f9062a0567d94322b9d2658cc52df1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8148ad8f10ea485d3d445900bd859ed6.html  dir_daf34d09a63f30978d87d07da1cc95f1.html  files.html  functions.html  functions_vars.html  global_args.h  hhg2.h  index.html  pq-g2  pq__filebuffer_8h_source.html  pq__gn_8h_source.html  pq__gn__cli_8h_source.html  pq__records_8h_source.html  pq__ttd__cli_8h_source.html  pq_td_cli.h  sci__to__int64_8h_source.html  structpq__chanrec__t.html  structpq__dispblock__t.html  structpq__fileinfo__t.html  structpq__hh__moduleinfo__t.html  structpq__repeat__block__t.html  (+10 more)
.deps/: read_hh.Po
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
doc/: example--fixing_delays.html  index.html
doc/html/: annotated.html  classes.html  dir_0208c5e850bf0a97e36559f24c744a44.html  dir_16f9062a0567d94322b9d2658cc52df1.html  dir_5b3ffc69b6b58e5d1e0af6ffa6f8e6a8.html  dir_5fedfc735fbb8a05c386562d9746eb94.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8148ad8f10ea485d3d445900bd859ed6.html  dir_daf34d09a63f30978d87d07da1cc95f1.html  dir_ecc42c014e115e0982fcefe6d20d2cb3.html  files.html  functions.html  functions_vars.html  index.html  pq__dump_8h_source.html  pq__filebuffer_8h_source.html  pq__gn_8h_source.html  pq__gn__cli_8h_source.html  pq__parse_8h_source.html  pq__records_8h_source.html  pq__ttd_8h_source.html  pq__ttd__cli_8h_source.html  sci__to__int64_8h_source.html  struct_tg_hd.html  structpq__chanrec__t.html  structpq__curve__t.html  structpq__dispblock__t.html  structpq__fb__t.html  structpq__fileinfo__t.html  structpq__hh__chan__t.html  structpq__hh__moduleinfo__t.html  structpq__params__t.html  structpq__ph__board__info__t.html  structpq__ph__router__info__t.html  structpq__repeat__block__t.html  structttd__ccorr2__t.html  structttd__ccorr3__t.html  structttd__ccorr4__t.html  structttd__ccorr__t.html  structttd__fb__t.html  (+15 more)
doc/html/search/: all_5.js  all_6.js  classes_1.js  variables_2.js  variables_5.js  variables_6.js
doc/latex/: annotated.tex  dir_16f9062a0567d94322b9d2658cc52df1.tex  dir_5b3ffc69b6b58e5d1e0af6ffa6f8e6a8.tex  dir_5fedfc735fbb8a05c386562d9746eb94.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_8148ad8f10ea485d3d445900bd859ed6.tex  dir_ecc42c014e115e0982fcefe6d20d2cb3.tex  refman.tex  structpq__fb__t.tex  structttd__ccorr2__t.tex  structttd__ccorr3__t.tex  structttd__ccorr4__t.tex  structttd__ccorr__t.tex  structttd__fb__t.tex  structttd__rb__t.tex
latex/: annotated.tex  dir_0208c5e850bf0a97e36559f24c744a44.tex  dir_16f9062a0567d94322b9d2658cc52df1.tex  dir_daf34d09a63f30978d87d07da1cc95f1.tex  refman.tex  struct_tg_hd.tex  structpq__chanrec__t.tex  structpq__curve__t.tex  structpq__dispblock__t.tex  structpq__fb__t.tex  structpq__fileinfo__t.tex  structpq__hh__chan__t.tex  structpq__hh__moduleinfo__t.tex  structpq__params__t.tex  structpq__ph__board__info__t.tex  structpq__ph__router__info__t.tex  structpq__repeat__block__t.tex  structttd__ccorr2__t.tex  structttd__ccorr3__t.tex  unionpq__rec__t.tex
search/: all_0.js  all_4.js  all_5.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js
src/: CMakeLists.txt  cli.h  convert.h  correlation.h  g3_cli.c  g3_cli.h  global_args.h  hh_header.h  hhg2.h  picoquant.c  pq_convert.c  pq_convert.h  pq_dump.c  pq_filebuffer.c  pq_filebuffer.h  pq_g2.c  pq_g2.h  pq_g2_cli.c  pq_g2_cli.h  pq_ht3_fromsync.c  pq_parse.c  pq_parse.h  pq_records.h  pq_ttd.c  pq_ttd.h  pq_ttd_cli.c  pq_ttd_cli.h  pqb.h  pqb_dump.c  pqb_g2.c  pqb_g2.h  pqb_merge.c  pqb_merge.h  read_hh.c  scitoll.c  scitollu.c  scitollu.h  timebuffer.h  ttd.c  ttd.h  (+35 more)
src/.deps/: read_hh-read_hh.Po  read_hh.Po
src/gen-libs/: CMakeLists.txt  colorful_output.c  colorful_output.h  h5_interface.c  h5_interface.h  sci_to_int64.c  sci_to_int64.h  scitoll.c  terminal_colors.c  terminal_colors.h
src/libs/: CMakeLists.txt  scitoll.h
src/picoquant_special/: pq_g2.c
src/pq-filebuffer/: CMakeLists.txt  pq_filebuffer.c
src/pq-lib/: CMakeLists.txt  pq_filebuffer.c  pq_filebuffer.h  pq_parse.c  pq_parse.h  pq_records.h
src/pq-parse/: CMakeLists.txt  pq_parse.c  pq_parse.h  pq_records.h
src/pq-ttd/: CMakeLists.txt  pq_ttd.c  pq_ttd.h  pq_ttd_cli.c  pq_ttd_cli.h  pq_ttd_main.c
src/pq-utils/: CMakeLists.txt  pq_dump.c  pq_dump.h  pq_g2.c  pq_g2_cli.h  pq_gn.c  pq_gn.h  pq_gn_cli.c  pq_gn_cli.h
src/ttd/: CMakeLists.txt  ttd.c  ttd.h
src/ttd-crosscorr/: CMakeLists.txt  ttd_crosscorr3.h
src/ttd-filebuffer/: CMakeLists.txt
src/ttd-lib/: CMakeLists.txt  ttd_crosscorr.c  ttd_crosscorr.h  ttd_crosscorr2.c  ttd_crosscorr2.h  ttd_crosscorr3.c  ttd_crosscorr3.h  ttd_crosscorr4.c  ttd_crosscorr4.h  ttd_filebuffer.c  ttd_filebuffer.h  ttd_ringbuffer.c  ttd_ringbuffer.h
src/ttd-ringbuffer/: CMakeLists.txt  ttd_ringbuffer.h
src/ttd-utils/: CMakeLists.txt  ttd_decimate.c  ttd_dump.c  ttd_g2.c  ttd_g2.h  ttd_g2_cli.c  ttd_g2_cli.h  ttd_g3.c  ttd_g3_cli.c  ttd_g3_cli.h  ttd_g4.c  ttd_g4_cli.c  ttd_g4_cli.h  ttd_merge.c  ttd_merge.h  ttd_shift.c
